package org.nomanspace;

public class Config {
    int rows = 8;
    int cols = 12;
}
