package org.nomanspace.Entity;

public class Grass extends Entity {
    @Override
    public String getAvatar() {
        return "[ G ] ";
    }

    @Override
    public String toString() {
        return "Grass";
    }
}
