package org.nomanspace.Entity;

public class Rock extends Entity implements Blockable {

    @Override
    public String getAvatar() {
        return "[ R ] ";
    }


}
